@@ -6,6 +6,10 @@ HISTORY of collective.pwexpiry
 - Fix javascripts with Plone 4.3.8, theres no more "ieversion()" function.
   [pcdummy]
 
+- Fix translations for "password disabled" statusmessage
+  (this fixes #11)
+  [fRiSi]
+
 - Update german translations.
   [pcdummy]
 
